--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -2,11 +2,21 @@
 <html>
   <head>
     <title>Transaction Checker</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
     />
     <link
       rel="shortcut icon"
@@ -20,21 +30,49 @@
     />
     <script src="{{ url_for('static', filename='js/d3.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/home.js') }}"></script>
   </head>
 
   <body>
-    <form id="form_with_schedule" onsubmit="submitForm(event)">
-      Schedule:<br />
-      <input type="text" name="schedule" id="input_with_schedule" size="80" />
-      <br /><br />
-      <input type="checkbox" name="use_xl_only" id="input_checkbox" />Use
-      <i>only</i> exclusive locks <br /><br />
-      <input type="submit" value="Go" />
-      <input type="reset" id="clear_button" value="Clear" />
-    </form>
-
-    <div id="response-container"></div>
-    <!-- SOLUTION -->
+    <button type="button" class="btn btn-default px-3 sapienza-button tutorial">
+      <i class="fa-solid fa-book icon-of-page"></i>
+      Instruction
+    </button>
+    <div class="container center-container">
+      <div class="form-container">
+        <h2 class="text-center pb-4">Transaction Checker</h2>
+        <form id="form_with_schedule" onsubmit="submitForm(event)">
+          <div class="form-group pb-4">
+            <label for="input_with_schedule">Schedule:</label>
+            <input
+              type="text"
+              name="schedule"
+              class="form-control"
+              id="input_with_schedule"
+              placeholder="Enter a schedule..."
+            />
+          </div>
+          <div class="form-group pb-4">
+            <input type="checkbox" name="use_xl_only" id="input_checkbox" />
+            <label for="input_checkbox"
+              >Use <i>only</i> <b>exclusive locks (xl)</b>.</label
+            >
+          </div>
+          <div class="form-group pb-4">
+            <button type="submit" class="btn btn-default px-3 sapienza-button">
+              <i class="fa-solid fa-paper-plane icon-of-page"></i> Solve
+            </button>
+            <button
+              type="button"
+              id="clear_button"
+              class="btn btn-default px-3 sapienza-button"
+            >
+              <i class="fa-solid fa-broom icon-of-page"></i> Clear
+            </button>
+          </div>
+        </form>
+        <div id="response-container"></div>
+      </div>
+    </div>
   </body>
 </html>
