--- a/flask/static/templates/instruction.html
+++ b/flask/static/templates/instruction.html
@@ -33,7 +33,11 @@
   </head>
 
   <body>
-    <button type="button" class="btn btn-default px-3 sapienza-button home">
+    <button
+      type="button"
+      class="btn btn-default px-3 sapienza-button home"
+      id="home"
+    >
       <i class="fa-solid fa-arrow-left icon-of-page"></i>
       Home
     </button>
