Precedence graph displayed

--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -72,6 +72,7 @@
           </div>
         </form>
         <div id="response-container"></div>
+        <div id="precedence-graph-container"></div>
       </div>
     </div>
   </body>
