--- a/flask/static/css/style.css
+++ b/flask/static/css/style.css
@@ -6,7 +6,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100%; /* Set a minimum height of the container to fill the viewport */
+    padding-top: 80px; /* Add some top padding to create space for the fixed buttons */
   }
 
   .form-container {
@@ -14,7 +15,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    max-width: 600px;
     width: 100%;
   }
 
@@ -78,4 +79,8 @@ body {
 
   .instruction-list li {
     padding-bottom: 1rem;
+  }
+
+  @media (ma) {
+    
   }
