--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -72,6 +72,12 @@
             2PL Compliance <br />
             <input type="checkbox" name="possibility" value="timestamp" />
             Timestamp<br />
+            <input
+              type="checkbox"
+              name="possibility"
+              value="view_serializability"
+            />
+            View Serializability<br />
           </div>
 
           <div class="form-group pb-4">
