--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -78,6 +78,8 @@
               value="view_serializability"
             />
             View Serializability<br />
+            <input type="checkbox" name="possibility" value="recoverability" />
+            Recoverability<br />
           </div>
 
           <div class="form-group pb-4">
