--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -80,6 +80,8 @@
             View Serializability<br />
             <input type="checkbox" name="possibility" value="recoverability" />
             Recoverability<br />
+            <input type="checkbox" name="possibility" value="acr" />
+            ACR<br />
           </div>
 
           <div class="form-group pb-4">
