--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -82,6 +82,8 @@
             Recoverability<br />
             <input type="checkbox" name="possibility" value="acr" />
             ACR<br />
+            <input type="checkbox" name="possibility" value="strict" />
+            Strict<br />
             <input type="checkbox" name="possibility" value="rigorousness" />
             Rigorousness<br />
           </div>
