Added OCSR checker

--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -86,6 +86,8 @@
             Strict<br />
             <input type="checkbox" name="possibility" value="rigorousness" />
             Rigorousness<br />
+            <input type="checkbox" name="possibility" value="ocsr" />
+            OCSR<br />
           </div>
 
           <div class="form-group pb-4">
