Added COCSR checker

--- a/flask/static/templates/solver.html
+++ b/flask/static/templates/solver.html
@@ -88,6 +88,8 @@
             Rigorousness<br />
             <input type="checkbox" name="possibility" value="ocsr" />
             OCSR<br />
+            <input type="checkbox" name="possibility" value="cocsr" />
+            COCSR<br />
           </div>
 
           <div class="form-group pb-4">
