--- a/flask/static/css/style.css
+++ b/flask/static/css/style.css
@@ -38,6 +38,65 @@ body {
     right: 20px;
   }
 
+  .popup-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    z-index: 999;
+    align-items: center;
+    justify-items: center;
+  }
+
+  .popup{
+    width: 100%; /* You can adjust this value */
+    max-width: 600px;
+    max-height: 80%;
+    padding: 0 20px 30px 20px;
+    background-color: white;
+    border: solid 3px #883844;
+    border-radius: 10px;
+    overflow-y: scroll;
+  }
+
+  .button-trash {
+    margin-right: 10px;
+  }
+
+  .pastSchedule {
+    display: flex;
+    margin: 15px 0;
+  }
+
+  .textPastSchedule {
+    margin: 0;
+    padding: 10px;
+    margin-right: 10px;
+    border: solid 1px #883844;
+    border-radius: 10px;
+  }
+
+
+  .copy-button {
+    height: 100%;
+  }
+
+  .popup-close {
+    padding: 20px 0;
+    display: flex;
+    justify-content: end;
+  }
+
+  .history {
+    position: absolute;
+    top: 20px;
+    right: 160px;
+  }
+
   .home {
     position: absolute;
     top: 20px;
