--- a/flask/static/templates/instruction.html
+++ b/flask/static/templates/instruction.html
@@ -60,6 +60,10 @@
             transaction is consider comitted after his last action)
           </li>
           <li>
+            For the timestamp solver we have consider the timestamp of each
+            transaction as the system clock of their first action.
+          </li>
+          <li>
             <i class="fa-solid fa-paper-plane icon-of-page"></i> Click on the
             "Solve" button to obtain the response.
           </li>
